force-app/main/default/objects/LNChatMessage__c/LNChatMessage__c.object-meta.xml
<CustomObject>
    <description>Stores individual AI chatbot messages within a session.</description>
    <label>LN Chat Message</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>LN Chat Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LN Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>