force-app/main/default/objects/LNChatMessage__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The full message content (user text or assistant JSON response).</description>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>