force-app/main/default/objects/LNChatMessage__c/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <description>The JSON responseType value from the LLM (kpi_cards, chart, comparison, timeline, alert, summary).</description>
    <label>Response Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>