force-app/main/default/objects/LNChatMessage__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role of the message sender: user or assistant.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>user</fullName>
                <label>User</label>
            </value>
            <value>
                <fullName>assistant</fullName>
                <label>Assistant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>