force-app/main/default/objects/LNChatMessage__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent Chat Session record.</description>
    <label>Session</label>
    <referenceTo>LNChatSession__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>ChatMessages</relationshipName>
    <type>Lookup</type>
</CustomField>